--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <h2>10. Contacto</h2>
         <p>Si tienes preguntas, inquietudes o solicitudes relacionadas con esta Política de Privacidad o el manejo de tu información personal, puedes contactarnos en:</p>
         <ul>
-            <li><strong>Email:</strong> [TU_EMAIL@gmail.com]</li>
+            <li><strong>Email:</strong> [marioymatias2025@gmail.com]</li>
             <li><strong>Ubicación:</strong> Córdoba, Argentina</li>
         </ul>
         <p>Responderemos a tu consulta en un plazo razonable, generalmente dentro de 30 días.</p>
